[package]
name = "tree-sitter-prom"
description = "Prometheus's text-based format"
version = "0.1.0"
authors = ["Zhongqiu Zhao <belltoy@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "prom"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/belltoy/tree-sitter-prom.git"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.8"
